@@ -1,5 +1,8 @@
 2005-01-30  Tom Tromey  <tromey@redhat.com>
 
+	* aot/aotclass.cc (lay_out_vtable): Skip constructors and private
+	methods.
+
 	* model/package.hh (model_package::get_simple_name): Handle
 	unnamed package.
 	* aot/mangle.cc (update): Handle empty package name.
